Alter travis.yml for user github page
Signed-off-by: Aaron Browne <aaron0browne@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,9 @@ script: mkdocs build
 deploy:
   provider: pages
   local-dir: site
+  target-branch: master
   skip-cleanup: true
   github-token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
   keep-history: true
   on:
-    branch: master
+    branch: dev
